GIS Maintenance- MuniEmployee Select Municipality is blank Files modified - [Cx2QueryExecutorServiceImpl.java,ManageGISData.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,ManageGISData.html,servicedef.xml,cx2_query.json,Cx2QueryExecutorService.java]

--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -19,7 +19,7 @@
                         <wm-composite name="composite1">
                             <wm-label class="col-md-3 form-control-static" name="label1" caption="Select Municipality" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container1">
-                                <wm-select name="select1" dataset="bind:Variables.AdminMunipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.AdminMunipalities.firstRecord" orderby="MunicipalityName:asc"></wm-select>
+                                <wm-select name="select1" dataset="bind:Variables.EmployeesOrAdminsMunicipalities.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.EmployeesOrAdminsMunicipalities.firstRecord" orderby="MunicipalityName:asc"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
