--- a/src/main/webapp/pages/ManageGISData/ManageGISData.html
+++ b/src/main/webapp/pages/ManageGISData/ManageGISData.html
@@ -11,7 +11,7 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn33"></wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow17" padding="unset 2em">
+                <wm-gridrow name="gridrow17">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn29" padding="2em unset">
                         <wm-label padding="unset 0.5em" caption="GIS Maintenance" fontweight="bold" fontsize="15" name="label2"></wm-label>
                     </wm-gridcolumn>
@@ -24,7 +24,7 @@
                         </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow18" padding="unset 2em">
+                <wm-gridrow name="gridrow18">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn31">
                         <wm-tabs name="tabs1">
                             <wm-tabpane name="tabpane1" title="Subdivisions">
