--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -148,7 +148,7 @@
                             <wm-layoutgrid name="layoutgrid8_1">
                                 <wm-gridrow name="gridrow28_1">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn29_1">
-                                        <wm-label padding="unset 0.5em" name="label32" caption="Please select your email notification frequency" fontweight="bold" fontsize="15"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label32" caption="How often would you like to receive email notifications?"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow29_1">
@@ -167,7 +167,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow7_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn16_1">
-                        <wm-panel iconclass="wi wi-building" name="panelMyMunicipalities" title="My Municipality Subscriptions" class="panel-primary">
+                        <wm-panel iconclass="wi wi-building" name="panelMyMunicipalities" title="My Municipalities" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid5_2">
                                 <wm-gridrow name="gridrow25">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn34_1" horizontalalign="center">
@@ -206,6 +206,18 @@
                                         </wm-livegrid>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow31">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn32">
+                        <wm-panel iconclass="wi wi-work" autoclose="outsideClick" name="panel4" title="My Companies" class="panel-primary">
+                            <wm-layoutgrid name="layoutgrid9">
+                                <wm-gridrow name="gridrow32">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn33_5"></wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow33"></wm-gridrow>
                             </wm-layoutgrid>
                         </wm-panel>
                     </wm-gridcolumn>
