--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -13,10 +13,10 @@
                         <wm-search name="searchUser" placeholder="View as User (search by Email Address)" dataset="bind:Variables.GetAllUsersForAdmin.dataSet" searchkey="email,firstName" displaylabel="email" displayimagesrc="photo" datafield="id" on-change="searchUserChange($event, $scope, newVal, oldVal)"
                         accessroles="CXAdmin"></wm-search>
                         <wm-composite name="composite1">
-                            <wm-label class="col-md-3 form-control-static" name="label2" caption="Select Muncipality" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-9" name="container1">
-                                <wm-select name="selectStandardUserMunicipality" dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" datavalue="bind:Variables.StandardUserMunicipalites.firstRecord"
-                                height="38px" orderby="MunicipalityName:asc"></wm-select>
+                            <wm-label class="col-md-3 form-control-static" name="label2" caption="Filter By Municipality" fontweight="bold" width="30%"></wm-label>
+                            <wm-container class="col-md-9" name="container1" width="70%">
+                                <wm-select name="selectStandardUserMunicipality" dataset="bind:Variables.StandardUserMunicipalites.dataSet" datafield="All Fields" displayfield="MunicipalityName" height="38px" orderby="MunicipalityName:asc" placeholder="Select Municipality"
+                                on-change="selectStandardUserMunicipalityChange($event, $scope, newVal, oldVal)"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
@@ -45,7 +45,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn7" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Open Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfOpenFormsForMunicipality.firstRecord['']" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:openCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -60,7 +60,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="1em unset unset unset" horizontalalign="center" name="gridcolumn9" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Closed Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfClosedFormsForMunicipality.firstRecord['']" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:closedCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
