--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -164,7 +164,7 @@
     </wm-content>
     <wm-footer name="footer" content="footer"></wm-footer>
     <wm-view class="dialog-view" name="viewNewForm">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="NewForm" iconclass="wi wi-file-text" name="dialogNewForm">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="New Form" iconclass="wi wi-file-text" name="dialogNewForm">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn1">
@@ -208,9 +208,9 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-warning" caption="Close" on-click="closeDialog()" name="button1"></wm-button>
                 <wm-button class="btn-primary" caption="Create" type="button" margin="unset 0.5em" name="buttonCreate" on-click="buttonCreateClick($event, $scope)" show="bind:Variables.GetFormTypesByCategoriesAndMunicipalities.dataSet.totalElements != 0"
-                iconclass=""></wm-button>
+                iconclass="wi wi-add"></wm-button>
+                <wm-button class="btn-secondary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
     </wm-view>
